# baesync

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/workflows/: ci-cd.yml
baesync/: __init__.py  cli.py  comparator.py  logging.py  network.py
docs/: README.md
tests/: __init__.py  test_clizz.py
